--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "@types/inquirer": "^7.3.1",
     "@types/jsdom": "^16.2.11",
     "@types/node-fetch": "^2.5.10"
+  },
+  "author": {
+    "name": "pikokr",
+    "email": "parangee9706@gmail.com",
+    "url": "https://github.com/pikokr"
   }
 }
