--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "dependencies": {
     "inquirer": "^8.1.1",
-    "jsdom": "^16.6.0",
-    "node-fetch": "^2.6.1"
+    "puppeteer": "^10.1.0"
   },
   "devDependencies": {
     "@types/inquirer": "^7.3.1",
