--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "inquirer": "^8.1.1",
+    "node-fetch": "^2.6.1",
     "puppeteer": "^10.1.0"
   },
   "devDependencies": {
